--- a/exchangerates.html
+++ b/exchangerates.html
@@ -4,8 +4,8 @@
 <body>
 
   <!-- START CODE Attention! Do not modify this code; -->
-    <script>var fm = "USD";var to = "EUR,RUB,USD,HUF,UAH,BTC";var tz = "timezone";var sz = "1x312";var lg = "en";var st = "default";var cd = 1;var am = 1</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div>
-    <!-- Attention! Do not modify this code; END CODE -->
+    <script>var fm = "USD";var to = "EUR,HUF,UAH";var tz = "timezone";var sz = "1x201";var lg = "en";var st = "default";var cd = 1;var am = 1</script><script src="//currencyrate.today/exchangerates"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div>
+  <!-- Attention! Do not modify this code; END CODE -->
 
 </body>
 </html>
