--- a/converter.html
+++ b/converter.html
@@ -4,7 +4,7 @@
 <body>
   
   <!-- START CODE Attention! Do not modify this code; -->
-    <script>var fm = "EUR";var to = "UAH";var tz = "timezone";var sz = "1x1";var lg = "en";var st = "default";var lr = "0";var rd = "0";</script><script src="//currencyrate.today/converter"></script><div style="text-align:right"><a href="https://currencyrate.today">CurrencyRate</a></div>
+    <script>var fm = "EUR";var to = "UAH";var tz = "timezone";var sz = "1x1";var lg = "en";var st = "default";var lr = "0";var rd = "0";</script><script src="//currencyrate.today/converter"></script>
   <!-- Attention! Do not modify this code; END CODE -->
 
 </body>
