--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
 <body>
   
   <!-- START CODE Attention! Do not modify this code; -->
-    <iframe width="219" height="302" src="http://calculator-1.com/outdoor/?f=666666&r=666666" scrolling="no" frameborder="0"></iframe>
+    <scrypt width="254" height="350" src="http://calculator-1.com/outdoor/?f=666666&r=666666" scrolling="no" frameborder="0"></scrypt>
   <!-- Attention! Do not modify this code; END CODE -->
 
 </body>
