--- a/stock_technical_analyser.html
+++ b/stock_technical_analyser.html
@@ -2,6 +2,8 @@
 <head>
 </head>
 <body>
+  
+  <!-- START CODE Attention! Do not modify this code; -->
 
   <!-- TradingView Widget BEGIN -->
   <div class="tradingview-widget-container">
@@ -22,5 +24,7 @@
   </div>
   <!-- TradingView Widget END -->
 
+  <!-- Attention! Do not modify this code; END CODE -->
+  
 </body>
 </html>
